--- a/project0.cabal
+++ b/project0.cabal
@@ -34,8 +34,23 @@ executable project0-exe
                     , ScopedTypeVariables
   -- other-extensions:    
   build-depends: base >=4.9 && <4.10
-               , lens
+               , async
+               , bytestring
+               , containers
+               , mtl
+               , stm
                , text
+               , transformers
+               , unordered-containers
+               , vector
+               , filepath
+               , directory
+               , process
+               , unix
+               , deepseq
+               , optparse-applicative
+
                , protolude
+               , lens
   -- hs-source-dirs:      
   default-language:    Haskell2010
