--- a/project0.cabal
+++ b/project0.cabal
@@ -19,8 +19,7 @@ executable project0-exe
   main-is:             Main.hs
   -- other-modules:       
   ghc-options: -Wall
-  default-extensions: NoImplicitPrelude
-                    , OverloadedStrings
+  default-extensions: OverloadedStrings
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
