--- a/project0.cabal
+++ b/project0.cabal
@@ -16,6 +16,7 @@ executable project0-exe
   hs-source-dirs: src
   main-is: Main.hs
   other-modules: Lib
+               , Config
   default-language: Haskell2010
   ghc-options: -threaded
                -dcore-lint
