--- a/project0.cabal
+++ b/project0.cabal
@@ -50,6 +50,9 @@ executable project0-exe
                     -- Extras
                     , NoImplicitPrelude
                     , LiberalTypeSynonyms
+                    , LambdaCase
+                    , MultiWayIf
+                    , BinaryLiterals
 
   build-depends: base >=4 && <5
                , semigroups
