--- a/project0.cabal
+++ b/project0.cabal
@@ -16,7 +16,7 @@ executable project0-exe
   hs-source-dirs: src
   main-is: Main.hs
   other-modules: Lib
-               , Config
+                 Config
 
   default-language: Haskell2010
   ghc-options: -threaded
@@ -35,24 +35,24 @@ executable project0-exe
                -fhide-source-paths
 
   default-extensions: OverloadedStrings
-                    , FlexibleContexts
-                    , FlexibleInstances
-                    , GeneralizedNewtypeDeriving
-                    , TypeSynonymInstances
-                    , MultiParamTypeClasses
-                    , FunctionalDependencies
-                    , NoMonomorphismRestriction
-                    , GADTs
-                    , BangPatterns
-                    , DeriveGeneric
-                    , ScopedTypeVariables
+                      FlexibleContexts
+                      FlexibleInstances
+                      GeneralizedNewtypeDeriving
+                      TypeSynonymInstances
+                      MultiParamTypeClasses
+                      FunctionalDependencies
+                      NoMonomorphismRestriction
+                      GADTs
+                      BangPatterns
+                      DeriveGeneric
+                      ScopedTypeVariables
                     
-                    -- Extras
-                    , NoImplicitPrelude
-                    , LiberalTypeSynonyms
-                    , LambdaCase
-                    , MultiWayIf
-                    , BinaryLiterals
+                      -- Extras
+                      NoImplicitPrelude
+                      LiberalTypeSynonyms
+                      LambdaCase
+                      MultiWayIf
+                      BinaryLiterals
 
   build-depends: base >=4 && <5
                , semigroups
