--- a/project0.cabal
+++ b/project0.cabal
@@ -11,6 +11,16 @@ license-file:        LICENSE
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
+library
+  hs-source-dirs:
+      src
+  build-depends:
+      base >=4.7 && <5
+  -- exposed-modules:
+  --     Lib
+  other-modules:
+      Paths_project0
+  default-language: Haskell2010
 
 executable project0-exe
   hs-source-dirs: src
@@ -94,4 +104,19 @@ executable project0-exe
                , prometheus
 
                , protolude
+
+test-suite project0-test
+  type: exitcode-stdio-1.0
+  hs-source-dirs: test
+  main-is: Main.hs
+  other-modules: Paths_project0
+  default-language: Haskell2010
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends: project0
+               , base >=4 && <5
+               , containers
+               , unordered-containers
+               , text
+               , mtl
+               , hedgehog
 
