--- a/hsfnord.cabal
+++ b/hsfnord.cabal
@@ -1,4 +1,4 @@
-name:                project0
+name:                hsfnord
 version:             0.1.0.0
 -- synopsis:            
 -- description:         
@@ -19,13 +19,13 @@ library
   -- exposed-modules:
   --     Lib
   other-modules:
-      Paths_project0
+      Paths_hsfnord
   default-language: Haskell2010
 
-executable project0-exe
+executable hsfnord-exe
   hs-source-dirs: src
   main-is: Main.hs
-  other-modules: Paths_project0
+  other-modules: Paths_hsfnord
 
   default-language: Haskell2010
   ghc-options: -threaded
@@ -105,14 +105,14 @@ executable project0-exe
 
                , protolude
 
-test-suite project0-test
+test-suite hsfnord-test
   type: exitcode-stdio-1.0
   hs-source-dirs: test
   main-is: Main.hs
-  other-modules: Paths_project0
+  other-modules: Paths_hsfnord
   default-language: Haskell2010
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends: project0
+  build-depends: hsfnord
                , base >=4 && <5
                , containers
                , unordered-containers
